Closed Bug 1660251 Opened 4 years ago Closed 4 years ago

Print preview isn't centred when resizing its browser vertically

Categories

(Core :: Print Preview, defect)

defect

Tracking

()

VERIFIED FIXED
81 Branch
Tracking Status
firefox81 --- verified
firefox82 --- verified

People

(Reporter: mstriemer, Assigned: emilio)

References

Details

Attachments

(2 files)

Attached video print-dialog-resize.mp4

With the dialog resizing patch in bug 1654962 the preview browser can now change dimensions after the initial render. The sizing works great, but the margins aren't updated when resizing vertically to re-centre the preview in the viewport.

Attached video from @pbz.

I have a hunch about why this might be.

Assignee: nobody → emilio
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/52a7009329ba
After bug 1658173 we need to re-center pages if any dimensions change, not just if width changes. r=dholbert
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Flags: qe-verify+

I tried reproducing this issue on macOS 10.15 , Ubuntu 16.04 and Win10x64 with 82.0a1(20200830213209) , 81.0b4(20200829200810) . Confirming this issue as verified fixed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: