Bug 1660251 - After bug 1658173 we need to re-center pages if any dimensions change, not just if width changes. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D87757